kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gbif
  labels:
    k8s-app: gbif
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: gbif
  template:
    metadata:
      labels:
        k8s-app: gbif
    spec:
      containers:
      - name: gbif
        image: ghcr.io/boettiger-lab/gbif-explorer
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 8
            memory: 32Gi
          limits:
            cpu: 8
            memory: 32Gi
